[package]
name = "implot"
version = "0.7.0-discord0"
edition = "2018"
authors = ["Sandro Merkli", "implot-rs contributors"]
description = "Rust bindings to https://github.com/epezent/implot"
homepage = "https://github.com/4bb4/implot-rs"
repository = "https://github.com/4bb4/implot-rs"
license = "MIT/Apache-2.0"
categories = ["gui", "api-bindings"]
readme = "README.md"

[dependencies]
imgui = { workspace = true, features = ["docking"] }
implot-sys = { path = "implot-sys" }
bitflags = "1.0"
parking_lot = "0.11"
rustversion = "1.0.4"
