[package]
name = "examples-shared"
version = "0.1.0"
authors = ["4bb4 <67376761+4bb4@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
implot = { path = "../../" }
imgui = { git = "https://github.com/imgui-rs/imgui-rs.git", rev = "d05827258fac63f0a57693bb51275c9bb483aef4" }
