[package]
name = "examples-shared"
version = "0.1.0"
authors = ["4bb4 <67376761+4bb4@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
implot = { path = "../../" }
imgui = { git = "https://github.com/imgui-rs/imgui-rs.git", rev = "fef6509a6e2bae62e1c30a46d3a4eaa0d7a83ddb" }
